# u-llm-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  TEST-RESULTS.md  pyproject.toml
.claude-plugin/: plugin.json
.serena/: project.yml
examples/: advanced_brainstorming.py  basic_orchestration.py  consensus_workflow.py  gemini_advanced_features.py  multi_llm_orchestration.py  multi_provider.py  orchestration_demo.py  quick_start.py  rag_client_example.py  streaming.py
skills/u-llm-sdk/: README.md  SKILL.md
skills/u-llm-sdk/examples/: basic_usage.py  multi_provider.py  orchestration.py  quick_utilities.py
skills/u-llm-sdk/references/: advanced-client.md  configuration.md  core-client.md  orchestration.md  providers.md  quick-utilities.md  session-management.md
src/u_llm_sdk/: __init__.py  config.py
src/u_llm_sdk/advanced/: __init__.py  client.py  config.py
src/u_llm_sdk/chronicle/: __init__.py  adapter.py
src/u_llm_sdk/core/: __init__.py  discovery.py  utils.py
src/u_llm_sdk/llm/: __init__.py  client.py  parsers.py
src/u_llm_sdk/llm/orchestration/: __init__.py  agent_executor.py  checkpoint.py  context_builder.py  contracts.py  delta_compliance.py  evidence_executor.py  file_scope.py  git_integration.py  lock_manager.py  merge_executor.py  patch_submission.py  state_machine.py  types.py  verifier.py
src/u_llm_sdk/llm/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py  gemini_api.py  hooks.py
src/u_llm_sdk/multi_llm/: __init__.py  boundary_validation.py  brainstorm.py  clarity.py  claude_executor.py  consensus.py  context_builder.py  enhanced_orchestrator.py  escalation.py  migration.py  monitoring.py  orchestrator.py  performance.py  rag_integration.py  session.py  utils.py
src/u_llm_sdk/pipeline/: __init__.py  chronicle_adapter.py  evidence_gate.py  executor.py  prompt_generator.py  report.py  task_classifier.py  types.py
src/u_llm_sdk/pipeline/templates/: atlas-auto.yaml  code_review.yaml  quick_fix.yaml  security_audit.yaml
src/u_llm_sdk/prompts/: codex_review_contract.md
src/u_llm_sdk/prompts/task_templates/: feature_developer.md  integration_specialist.md  project_architect.md  refactoring_expert.md
src/u_llm_sdk/rag_client/: __init__.py  cache.py  client.py  config.py
src/u_llm_sdk/scribe/: __init__.py  policy.py  store_sqlite.py  types.py
src/u_llm_sdk/session/: __init__.py  base.py  claude.py  codex.py  gemini.py  message.py  templates.py
src/u_llm_sdk/session/templates/: api_designer.md  code_reviewer.md  custom_teller.md  (+7 more)
src/u_llm_sdk/types/: __init__.py  config.py  evidence.py  exceptions.py  features.py  hooks.py  models.py
tests/: conftest.py  test_base_provider.py  test_claude_provider.py  test_codex_provider.py  test_config.py  test_gemini_provider.py  test_llm_types.py  test_llm_types_orchestration.py  test_real_llm.py
(+25 files in other folders)
